Basic work for html is done. Moving on to the calculator gui

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src="myScript.js" defer></script>
 </head>
 <body>
+    <div id="container">
+        <div id="header">Header</div>
+        <div id="content">
+            <div id="calculator">
+                <div id="display">
+                    Number is displayed here
+                </div>
+                <div id="buttons">
+                    5 buttons per line, total of 4 line. Total 20 button
+                </div>
+            </div>
+        </div>
+        <div id="footer">Footer</div>
+    </div>
     
 </body>
 </html>
