Done with basic calculator input gui. Moving on to backgrond colour

--- a/index.html
+++ b/index.html
@@ -17,7 +17,37 @@
                     Number is displayed here
                 </div>
                 <div id="buttons">
-                    5 buttons per line, total of 4 line. Total 20 button
+                    <div class="column">
+                       <button class="input">7</button>
+                       <button class="input">4</button>
+                       <button class="input">1</button>
+                       <button class="input">0</button>
+                    </div>
+                    <div class="column">
+                        <button class="input">8</button>
+                        <button class="input">5</button>
+                        <button class="input">2</button>
+                        <button class="input">.</button> 
+                    </div>
+                    <div class="column">
+                        <button class="input">9</button>
+                        <button class="input">6</button>
+                        <button class="input">3</button>
+                        <button class="input">EXP</button> 
+                    </div>
+                    <div class="column">
+                        <button class="input">DEL</button>
+                        <button class="input">X</button>
+                        <button class="input">+</button>
+                        <button class="input">Ans</button> 
+                    </div>
+                    <div class="column">
+                        <button class="input">CLR</button>
+                        <button class="input">÷</button>
+                        <button class="input">-</button>
+                        <button class="input">=</button> 
+                    </div>
+
                 </div>
             </div>
         </div>
