Done with background color. Moving on to js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="content">
             <div id="calculator">
                 <div id="display">
-                    Number is displayed here
+                    <div id="screen">Number Here</div>
                 </div>
                 <div id="buttons">
                     <div class="column">
