Added some background color on buttons.

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                         <button class="input">EXP</button> 
                     </div>
                     <div class="column">
-                        <button class="input">DEL</button>
-                        <button class="input">X</button>
-                        <button class="input">+</button>
-                        <button class="input">Ans</button> 
+                        <button class="input special">DEL</button>
+                        <button class="input operator">X</button>
+                        <button class="input operator">+</button>
+                        <button class="input operator">Ans</button> 
                     </div>
                     <div class="column">
-                        <button class="input">CLR</button>
-                        <button class="input">÷</button>
-                        <button class="input">-</button>
-                        <button class="input">=</button> 
+                        <button class="input special">CLR</button>
+                        <button class="input operator">÷</button>
+                        <button class="input operator">-</button>
+                        <button class="input equal">=</button> 
                     </div>
 
                 </div>
