--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
         <div id="content">
             <div id="calculator">
                 <div id="display">
-                    <div id="screen">Number Here</div>
+                    <div id="screen"></div>
                 </div>
                 <div id="buttons">
                     <div class="column">
-                       <button class="input">7</button>
-                       <button class="input">4</button>
-                       <button class="input">1</button>
-                       <button class="input">0</button>
+                       <button class="input number">7</button>
+                       <button class="input number">4</button>
+                       <button class="input number">1</button>
+                       <button class="input number">0</button>
                     </div>
                     <div class="column">
-                        <button class="input">8</button>
-                        <button class="input">5</button>
-                        <button class="input">2</button>
+                        <button class="input number">8</button>
+                        <button class="input number">5</button>
+                        <button class="input number">2</button>
                         <button class="input">.</button> 
                     </div>
                     <div class="column">
-                        <button class="input">9</button>
-                        <button class="input">6</button>
-                        <button class="input">3</button>
+                        <button class="input number">9</button>
+                        <button class="input number">6</button>
+                        <button class="input number">3</button>
                         <button class="input">EXP</button> 
                     </div>
                     <div class="column">
