Basic function works. Calculator is now usable. Only exponent and some minor improvement to be made soon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <button class="input number">8</button>
                         <button class="input number">5</button>
                         <button class="input number">2</button>
-                        <button class="input">.</button> 
+                        <button class="input number">.</button> 
                     </div>
                     <div class="column">
                         <button class="input number">9</button>
