Exponent now works

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <button class="input number">9</button>
                         <button class="input number">6</button>
                         <button class="input number">3</button>
-                        <button class="input">EXP</button> 
+                        <button class="input exponent">EXP</button> 
                     </div>
                     <div class="column">
                         <button class="input special">DEL</button>
