Calculator now can recall last answer for quick calculation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <button class="input special">DEL</button>
                         <button class="input operator">X</button>
                         <button class="input operator">+</button>
-                        <button class="input operator">Ans</button> 
+                        <button class="input number">Ans</button> 
                     </div>
                     <div class="column">
                         <button class="input special">CLR</button>
