Fixes a bug where undo immediately clears the screen if user wanted to undo their operator input. Added Info button on the top left and footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div id="container">
-        <div id="header">Header</div>
+        <div id="header">
+            <button class="help">Info</button>
+        </div>
         <div id="content">
             <div id="calculator">
                 <div id="display">
@@ -51,7 +53,9 @@
                 </div>
             </div>
         </div>
-        <div id="footer">Footer</div>
+        <div id="footer">
+            <p>Copyright &copy; 2021 sakurai-kei</p>
+        </div>
     </div>
     
 </body>
